# scheck

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
fileHandler/: fileHandler.cpp  fileHandler.h
paramsHandler/: paramsHandler.cpp  paramsHandler.h
spellChecker/: spellChecker.cpp  spellChecker.h
trie/: trie.cpp  trie.h
variableFormatter/: parsingConf.cpp  parsingConf.h  variableFormatter.cpp  variableFormatter.h
